--- a/java_script_workload/basics/b_angular/index.html
+++ b/java_script_workload/basics/b_angular/index.html
@@ -16,7 +16,7 @@
   <script>
     var app = angular.module('myApp', []);
     app.controller('myCtrl', function($scope) {
-      $scope.message = 'Hello World from AngularJS!';
+      $scope.message = 'Hello World from AngularJS!..... sample test on docker contaier by sanjeev thapa';
     });
   </script>
 </body>
